chore: improved user experience when creating a new account

--- a/client/src/components/atoms/form/FormInput/FormInput.css
+++ b/client/src/components/atoms/form/FormInput/FormInput.css
@@ -1,6 +1,6 @@
 .form-input-container {
     height: 45px;
-    border-radius: .5rem;
+    border-radius: var(--radius-sm);
     transition: all 0.2s;
 }
 
